objects/chatcomp__ChatterCompliance_PostContentInformation__c.object
<CustomObject>
    <description>This objects gathers information on the post and comments before these being inserted. The purpose of this object is to identify the user input and the system output (These are the same except that the  &quot;Substitute banned words with characters&quot; option is enabled).</description>
    <fields>
        <fullName>chatcomp__FeedCommentUser__c</fullName>
        <description>The user that created the feedItem (if any) related to this object.</description>
        <inlineHelpText>The user that created the feedItem (if any) related to this object.</inlineHelpText>
        <label>Feed Comment User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__FeedItemUser__c</fullName>
        <description>The User that created the feedItem (if any) related to this object.</description>
        <inlineHelpText>The User that created the feedItem (if any) related to this object.</inlineHelpText>
        <label>Feed Item User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chatcomp__Original_post_content__c</fullName>
        <description>User input on feeds and comments should be the same as the system output except that &quot;Substitute banned words with character&quot; option is enabled.</description>
        <inlineHelpText>User input on feeds and comments should be the same as the system output except that &quot;Substitute banned words with character&quot; option is enabled.</inlineHelpText>
        <label>Original post content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>chatcomp__Post_content__c</fullName>
        <description>System output on feeds and comments should be the same as the user input except that &quot;Substitute banned words with character&quot; option is enabled.</description>
        <inlineHelpText>System output on feeds and comments should be the same as the user input except that &quot;Substitute banned words with character&quot; option is enabled.</inlineHelpText>
        <label>Post content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Chatter Compliance Post Content Info</label>
    <listViews>
        <fullName>chatcomp__All</fullName>
        <columns>NAME</columns>
        <columns>chatcomp__FeedItemUser__c</columns>
        <columns>chatcomp__FeedCommentUser__c</columns>
        <columns>chatcomp__Original_post_content__c</columns>
        <columns>chatcomp__Post_content__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PostContentInformation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Compliance Post Contents Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>